# kpi

./: .gitignore  CMakeLists.txt
oop/: oop.cpp
oop/1/: Function.cpp  Function.h
oop/2/: Date.cpp  Date.h  Enterprise.cpp  Enterprise.h  IOProcessor.cpp  IOProcessor.h  lab_2.cpp
oop/3/: Employee.cpp  Employee.h  Manager.cpp  Manager.h  Person.cpp  Person.h  Position.cpp  Position.h  Showable.cpp  Showable.h  lab3.cpp
oop/4/: Checkout.cpp  Checkout.h  Container.h  DailyBalance.cpp  DailyBalance.h  Fuel.cpp  Fuel.h  Operator.cpp  Operator.h  lab4.cpp
oop/kursova/: kursova.cpp
os/: first.c  os_2.c  os_3.c  os_3_2.c  os_4.c  pipe_example.c
osnovy/1semestr/: fifth.cpp  first.cpp  first.h  forth.cpp  second.cpp  six_example.cpp  sort.cpp  third_a.cpp  third_a.h  third_b.cpp  third_b.h  third_c.cpp  third_c.h
