cmake_minimum_required(VERSION 3.12.3)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 osnovy/1semestr/first.cpp)
add_executable(2 osnovy/1semestr/second.cpp)
add_executable(3_a osnovy/1semestr/third_a.cpp osnovy/1semestr/third_a.h)
add_executable(3_b osnovy/1semestr/third_b.cpp osnovy/1semestr/third_b.h)
add_executable(3_c osnovy/1semestr/third_c.cpp osnovy/1semestr/third_c.h)
add_executable(4 osnovy/1semestr/forth.cpp)
add_executable(5 osnovy/1semestr/fifth.cpp)
add_executable(sort osnovy/1semestr/sort.cpp)
add_executable(algo1 algo/algo_3.cpp)
add_executable(os_1 os/first.c)
add_executable(os_3 os/third.c)
add_executable(pe os/pipe_example.c)
add_executable(os_4 os/os_4.c)
add_executable(os_3.2 os/os_3_2.c)
add_executable(os_2 os/os_2.c)
add_executable(os_2_ex os/os_2_example.c)


#add_executable(6_test osnovy/1semestr/six_example.cpp)
